--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 body {
-  padding: 20px 60px;
+  padding: 0 60px;
   font-family: 'Open Sans Condensed', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
 }
